[gd_scene load_steps=12 format=3 uid="uid://dlpk4ggca6lw6"]

[ext_resource type="Script" uid="uid://5sp2y4x1dg7v" path="res://examples/destruction/destruction_showcase_main.gd" id="1"]
[ext_resource type="PackedScene" path="res://examples/destruction/player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c7uy4xjqflpn8" path="res://examples/destruction/destructible_cutout.tscn" id="3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 3
ambient_light_color = Color(0.7, 0.7, 0.7, 1)
ambient_light_energy = 0.3
tonemap_mode = 2
fog_enabled = true
fog_light_color = Color(0.7, 0.7, 0.7, 1)
fog_density = 0.001
fog_height_density = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.4, 0.4, 0.4, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
material = SubResource("StandardMaterial3D_1")
size = Vector3(50, 0.1, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(50, 0.1, 50)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.6, 0.3, 0.1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2"]
material = SubResource("StandardMaterial3D_2")
size = Vector3(3, 1, 3)

[node name="DestructionShowcase" type="Node3D" node_paths=PackedStringArray("crosshair_label", "interaction_prompt_label", "debug_info_label", "pattern_label", "controls_panel")]
script = ExtResource("1")
destructible_scene = ExtResource("3")
player_scene = ExtResource("2")
destructible_spawn_position = Vector3(0, 1.5, -5)
crosshair_label = NodePath("UI/Crosshair")
interaction_prompt_label = NodePath("UI/InteractionPrompt")
debug_info_label = NodePath("UI/DebugInfo")
pattern_label = NodePath("UI/PatternLabel")
controls_panel = NodePath("UI/ControlsPanel")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_1")

[node name="Pedestal" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -5)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pedestal"]
mesh = SubResource("BoxMesh_2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -15.0
offset_right = 10.0
offset_bottom = 15.0
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionPrompt" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 60.0
text = "Press E to Destroy"
horizontal_alignment = 1

[node name="DebugInfo" type="RichTextLabel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 150.0
bbcode_enabled = true
text = "[color=green]FPS: 0[/color]
[color=yellow]Destructions: 0[/color]
[color=cyan]Active Fragments: 0[/color]"

[node name="PatternLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -281.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "Pattern: Random"
horizontal_alignment = 2

[node name="ControlsPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -453.0
offset_right = 360.0
offset_bottom = -10.0
grow_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="UI/ControlsPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[b]Controls:[/b]
[color=yellow]Movement:[/color]
  WASD - Move
  Mouse - Look around
  Space - Jump
  Shift - Sprint

[color=yellow]Interaction:[/color]
  E - Destroy object
  R - Reset scene
  Tab - Cycle destruction pattern

[color=yellow]UI:[/color]
  F1 - Toggle controls
  F2 - Toggle debug info
  Escape - Release mouse"
